# AppStartByLang

./: AppStartByLang.cpp  CMakeLists.txt  LICENSE.txt  ReadMe.txt
